# figure-generator

./: .gitignore  CLAUDE.md  NOTICE  README.md  pyproject.toml
docs/: PLAN.md  reporting_guideline_figure_map.md  standards.md
scripts/: setup.sh
src/scidraw_agent/: __init__.py  attribution.py  cli.py  compose.py  config.py  export.py  extract.py  fetch.py  ingest.py  llm.py  mcp_server.py  models.py  palette.py  registry.py  render_handoff.py  router.py  run.py  selfcheck.py  stats.py  theme.py
src/scidraw_agent/backends/: __init__.py  _text.py  bioart.py  bioart_index.json  bioicons.py  healthicons.py  phylopic.py  wikimedia.py  zenodo.py
src/scidraw_agent/generators/: __init__.py  anatomical.py  circuit.py  data_plot.py  graphical_abstract.py  pipeline.py
src/scidraw_agent/reporting/: __init__.py  counts.py  templates.py
src/scidraw_agent/standards/: __init__.py  linter.py  style_guard.py
tests/: test_attribution.py  test_cli.py  test_compose.py  test_dataplot.py  test_export.py  test_extract.py  test_fetch.py  test_fetch_live.py  test_generators.py  test_graphical_abstract.py  test_ingest.py  test_mcp.py  test_models.py  test_palette.py  test_panels.py  test_registry.py  test_render_handoff.py  test_reporting.py  test_run.py  test_scatter_stats.py  test_standards.py  test_standards_tier2.py
tests/fixtures/: lesion_methods.txt  tsc_aim.txt
tests/fixtures/reporting/: consort_flow.json  prisma_flow.json  stard_flow.json  strobe_flow.json
